--- a/gistabulator.css
+++ b/gistabulator.css
@@ -79,4 +79,52 @@
 #hutangTable .tabulator-table {
     width: 100% !important;
     min-width: 100% !important;
+
+}
+
+
+/* ============================= */
+/* TABULATOR - FOLLOW BOOTSTRAP  */
+/* ============================= */
+
+/* LIGHT MODE */
+html[data-bs-theme="light"] .tabulator {
+    background-color: #ffffff;
+    color: #212529;
+}
+
+html[data-bs-theme="light"] .tabulator-row {
+    background-color: #ffffff;
+}
+
+html[data-bs-theme="light"] .tabulator-row:hover {
+    background-color: #f1f3f5 !important;
+}
+
+/* DARK MODE */
+html[data-bs-theme="dark"] .tabulator {
+    background-color: #1e1e1e;
+    color: #dee2e6;
+}
+
+html[data-bs-theme="dark"] .tabulator-row {
+    background-color: #2a2a2a;
+}
+
+html[data-bs-theme="dark"] .tabulator-row:hover {
+    background-color: #3a3a3a !important;
+}
+
+/* Header */
+html[data-bs-theme="dark"] .tabulator-header,
+html[data-bs-theme="dark"] .tabulator-col {
+    background-color: #2e2e2e !important;
+    color: #fff !important;
+    border-color: #444 !important;
+}
+
+html[data-bs-theme="light"] .tabulator-header,
+html[data-bs-theme="light"] .tabulator-col {
+    background-color: #f8f9fa !important;
+    border-color: #dee2e6 !important;
 }
